<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.chua</groupId>
        <artifactId>spring-support-parent-starter</artifactId>
        <version>4.0.0.29</version>
    </parent>

    <artifactId>spring-support-pay-starter</artifactId>
    <description>支付模块</description>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-pay-client-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>com.chua</groupId>
            <artifactId>spring-support-oauth-client-starter</artifactId>
        </dependency>

    </dependencies>

</project>